coverage: Don't mangle internal coverage symbols

These symbols need to be referenced when linking to the coverage test
program, so surround them with G_BEGIN_DECLS/G_END_DECLS so that they
don't get mangled.

https://bugzilla.gnome.org/show_bug.cgi?id=761072